# crypto-config

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  lxd-profile  status.sh
debian/: README  README.Debian  README.source  changelog  control  copyright  crypto-config.install  crypto-config.lintian-overrides  crypto-config.manpages  crypto-config.postinst  crypto-config.triggers  crypto-configuration.install  crypto-configuration.postinst  crypto-configuration.triggers  files  watch
debian/source/: options
debian/upstream/: signing-key.asc
docs/: crypto-config-specification.md  demo-script.txt  genesis.md  release.md
docs/lxd-cloud-config/: lxd-cloud-config.sh  user-data-clean.yaml  user-data-minimal.yaml  user-data.yaml
etc/crypto-config/future/: parent
man/: crypto-config.1.adoc
profiles/debian/test1/: metadata.json
profiles/default/: gnutls.conf  metadata.json
profiles/default/openssl.conf.d/: empty.cnf
profiles/future/: exim  metadata.json
profiles/future/apt.conf.d/: assert-pubkey-algo.conf
profiles/future/openssl.conf.d/: seclevel.cnf
profiles/legacy/: metadata.json
profiles/legacy/apt.conf.d/: assert-pubkey-algo.conf
profiles/legacy/openssl.conf.d/: seclevel.cnf
profiles/like-default/: metadata.json
src/: crypto-config  crypto-config-hijack.sh  crypto-configuration.sh  main.rs
