[package]
name = "crypto-config"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "debuginfo"
panic = "abort"

[dependencies]
clap = { version = "4.5.26", features = ["derive", "env"] }
topological-sort = { version = "0.2.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
